# spanreed

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
spanreed/: __init__.py  commands.py  consumer.py  exceptions.py  models.py  task_manager.py
spanreed/backend/: redis.py
spanreed/management/commands/: spanreed_worker.py
spanreed/testing/: pytest_plugin.py
tests/: conftest.py  django_settings.py  factories.py  models.py  settings.py  tasks.py  test_consumer.py  test_pytest_plugin.py  test_redis_backend.py
